[workspace]
members = [
    "crates/tbtool-edb",
    "crates/tbtool-core",
    "crates/tbtool-app",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
encoding_rs = "0.8"
md-5 = "0.10"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
wmi = "0.17"
zip = { version = "2.4", default-features = false, features = ["deflate"] }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Controls",
    "Win32_UI_Controls_Dialogs",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
