[package]
name = "tbtool-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
encoding_rs.workspace = true
tbtool-edb = { path = "../tbtool-edb" }
thiserror.workspace = true
zip.workspace = true

[target.'cfg(windows)'.dependencies]
serde.workspace = true
windows-sys.workspace = true
wmi.workspace = true
